resources/assets/sass/sections/_events-list.scss
.events-list {
	margin-bottom: 5em;
}

.month-range.hidden ul {
	display: none;
}

.month-title {
	width: 100%;
	display: block;
	border-bottom: 1px solid $black;
	padding-bottom: $list-vert-padding;
	padding-top: $list-vert-padding;
	line-height: 1;
}

.event a {
	color: $black;
	cursor: pointer;
	position: relative;
	text-decoration: none;
}

.event a:hover,
.event.event--active a {
	color: $highlight;
	
	.event-item-icon {
		-webkit-transform: rotate(0deg);

		&:last-child {
			margin-right: 10px;
		}

		svg {
			height: 24px;
			margin-right: 6px;
			padding-top: 0;
			width: auto;
		}
	}
}
 
.event-item-date {
	position: absolute;
	top: 0;
	left: 0;
	padding: $list-vert-padding 0;
	width: $left-col;

	@media all and (max-width: 600px) {
		position: relative;
		padding-bottom: 0;

		.meta-data {
			// font-size: 0.75em;
			color: $highlight;
		}
	}
}

.event-item-title {
	padding-left: $left-col;
	display: block;
	// border-bottom: 1px solid $black;
	position: relative;

	@media all and (max-width: 600px) {
		padding: 0.4em 0 0 0;
	}

	.event-item-inner {
		padding: $list-vert-padding 0;
		border-bottom: 1px solid $black;

		@media all and (max-width: 600px) {
			padding-top: 5px;
		}
	}

	h3 {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

.event-item-icons {
	float: left;
	height: 21px;

	@media all and (max-width: 600px) {
		position: absolute;
		top: -18px;
		right: 0;
	}
}

.event-item-icon {
	display: block;
	float: left;
	-webkit-transform: rotate(-90deg);
	@include transition(all .3s ease-out);

	svg {
		height: 0;
		margin: 0;
		padding-top: 12px;
		top: 11px;
		@include transition(all .3s ease-out);
	}

	@media all and (max-width: 600px) {
		-webkit-transform: rotate(0deg);

		&:last-child {
			margin-right: 0px !important;
		}

		svg {
			height: 18px !important;
			margin-right: 6px;
			padding-top: 0;
			width: auto;
		}
	}
}

